--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
   },
   "dependencies": {
     "@vitejs/plugin-legacy": "^5.4.1",
+    "load-asset": "^1.2.0",
+    "poisson-disk-sampling": "^2.3.1",
     "three": "^0.165.0"
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.10.2",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.8.0",
     "@playwright/test": "^1.45.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
@@ -43,6 +46,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unicorn": "^54.0.0",
+    "globals": "^15.9.0",
     "husky": "^9.0.11",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
@@ -54,4 +58,3 @@
     "vite-plugin-glsl": "^1.3.0"
   }
 }
-
