--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-legacy": "^5.4.1",
+    "gsap": "^3.12.5",
     "load-asset": "^1.2.0",
     "poisson-disk-sampling": "^2.3.1",
     "three": "^0.165.0"
